--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "ts-node-dev src/app.ts"
+		"dev": "ts-node-dev src/app.ts",
+		"test": "jest",
+		"build": "tsc -p tsconfig.build.json"
 	},
 	"author": "",
 	"license": "ISC",
@@ -15,9 +17,14 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@types/jest": "^29.5.2",
+		"@types/supertest": "^2.0.12",
 		"body-parser": "^1.20.2",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"mongoose": "^7.3.1"
+		"ts-jest": "^29.1.1",
+		"mongodb-memory-server": "^8.13.0",
+		"mongoose": "^7.3.1",
+		"supertest": "^6.3.3"
 	}
 }
