Using esnext modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
 	"compilerOptions": {
 		"target": "es2022",
 		"types": ["node", "jest"],
+		"lib": ["es2022", "DOM"],
 		"allowJs": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"module": "es2022",
+		"module": "NodeNext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
