--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"build": "tsc -p tsconfig.build.json"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/mongoose": "^5.11.97",
 		"ts-node-dev": "^2.0.0",
@@ -20,11 +21,12 @@
 		"@types/jest": "^29.5.2",
 		"@types/supertest": "^2.0.12",
 		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"ts-jest": "^29.1.1",
 		"mongodb-memory-server": "^8.13.0",
 		"mongoose": "^7.3.1",
-		"supertest": "^6.3.3"
+		"supertest": "^6.3.3",
+		"ts-jest": "^29.1.1"
 	}
 }
