--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "ISC",
 	"main": "index.js",
 	"scripts": {
-		"dev": "ts-node-dev src/app.ts",
+		"dev": "nodemon src/app.ts",
 		"test": "jest",
 		"build": "tsc -p tsconfig.build.json"
 	},
@@ -14,6 +14,7 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/mongoose": "^5.11.97",
+		"nodemon": "^3.0.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.1.6"
 	},
