--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon src/app.ts",
-		"test": "jest",
+		"test": "jest --coverage",
 		"build": "tsc -p tsconfig.build.json"
 	},
 	"devDependencies": {
